# duckstation

./: .travis.yml  CMakeLists.txt  appveyor.yml
.github/workflows/: windows-build.yml
src/common/: CMakeLists.txt  common.vcxproj  common.vcxproj.filters
src/common-tests/: common-tests.vcxproj
src/core/: CMakeLists.txt  bus.cpp  bus.h  bus.inl  cdrom.cpp  cdrom.h  core.vcxproj  core.vcxproj.filters  cpu_code_cache.cpp  cpu_code_cache.h  cpu_core.cpp  cpu_core.h  cpu_core.inl  cpu_recompiler.cpp  cpu_recompiler.h  cpu_recompiler_code_generator.cpp  cpu_recompiler_code_generator.h  cpu_recompiler_code_generator_x64.cpp  cpu_recompiler_register_cache.cpp  cpu_recompiler_types.h  cpu_types.cpp  cpu_types.h  dma.cpp  dma.h  gpu.cpp  gpu.h  gpu_commands.cpp  gpu_hw.cpp  gpu_hw_d3d11.cpp  gpu_hw_d3d11.h  gpu_hw_opengl.cpp  gpu_hw_opengl_es.cpp  gpu_hw_shadergen.cpp  gpu_hw_shadergen.h  gpu_sw.cpp  host_display.cpp  host_display.h  host_interface.cpp  host_interface.h  mdec.cpp  (+11 more)
src/duckstation-qt/: CMakeLists.txt  consolesettingswidget.cpp  consolesettingswidget.ui  d3d11displaywindow.cpp  d3d11displaywindow.h  duckstation-qt.vcxproj  duckstation-qt.vcxproj.filters  gpusettingswidget.cpp  mainwindow.cpp  mainwindow.h  opengldisplaywidget.cpp  opengldisplaywindow.cpp  opengldisplaywindow.h  qtdisplaywindow.cpp  qtdisplaywindow.h  qthostinterface.cpp  qthostinterface.h  settingsdialog.cpp  update_translations.bat
src/duckstation-sdl/: d3d11_host_display.cpp  duckstation-sdl.vcxproj  duckstation-sdl.vcxproj.filters  (+4 more)
src/scmversion/: CMakeLists.txt  gen_scmversion.cmake
(+14 files in other folders)
